Fix firefox overflow-y bug

--- a/css/app.css
+++ b/css/app.css
@@ -26,6 +26,4 @@
   padding: 5px;
 
   background-color: #fff;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
